@@ -1,0 +1,63 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  min_layer = 0,
+  max_layer = 2,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+destination{
+  name = "destination",
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 1,
+}
+
+npc{
+  name = "usual_npc_1",
+  layer = 0,
+  x = 56,
+  y = 29,
+  direction = 3,
+  subtype = 1,
+}
+
+npc{
+  name = "usual_npc_2",
+  layer = 0,
+  x = 88,
+  y = 29,
+  direction = 3,
+  subtype = 1,
+}
+
+npc{
+  name = "generalized_npc_1",
+  layer = 0,
+  x = 56,
+  y = 61,
+  direction = 3,
+  subtype = 1,
+}
+
+npc{
+  name = "generalized_npc_2",
+  layer = 0,
+  x = 88,
+  y = 61,
+  direction = 3,
+  subtype = 1,
+}
+
