@@ -93,6 +93,7 @@ Changes that do not introduce incompatibilities:
 * Add methods entity:bring_sprite_to_front/back() (#809).
 * enemy/custom_entity:create_sprite() now take an optional name value.
 * Add a method hero:start_attack() (#821).
+* Add methods npc:is/set_traversable() (#712).
 * Add methods chest:get/set_treasure() (#664).
 * Add an event chest:on_opened() with treasure info parameters (#483).
 * Add methods dynamic_tile:get_pattern_id() and get_modified_ground() (#755).
